// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select :props :bordered 1`] = `
<div class="t-select-wrap">
  <div class="t-popup-reference t-select-popup-reference" style="position: relative;">
    <transition-stub name="t-popup_animation" appear="true"></transition-stub>
    <div class="t-select t-size-m"><span class="t-select-placeholder"> </span><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-chevron-down t-size-m t-select-right-icon">
        <path fill-opacity=".9" fill-rule="evenodd" d="M226.57792 413.41696L285.40928 354.58624 511.9936 581.17056 738.5792 354.58624 797.408 413.41696 511.9936 698.8352 226.57792 413.41696Z" clip-rule="evenodd"></path>
      </svg></div>
    <div dir="ltr" class="resize-sensor" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
      <div class="resize-sensor-expand" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
        <div style="position: absolute; left: 0px; top: 0px; transition: 0s;"></div>
      </div>
      <div class="resize-sensor-shrink" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
        <div style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select :props :clearable 1`] = `
<div class="t-select-wrap">
  <div class="t-popup-reference t-select-popup-reference" style="position: relative;">
    <transition-stub name="t-popup_animation" appear="true"></transition-stub>
    <div class="t-select t-size-m"><span class="t-select-placeholder"> </span><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-chevron-down t-size-m t-select-right-icon">
        <path fill-opacity=".9" fill-rule="evenodd" d="M226.57792 413.41696L285.40928 354.58624 511.9936 581.17056 738.5792 354.58624 797.408 413.41696 511.9936 698.8352 226.57792 413.41696Z" clip-rule="evenodd"></path>
      </svg></div>
    <div dir="ltr" class="resize-sensor" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
      <div class="resize-sensor-expand" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
        <div style="position: absolute; left: 0px; top: 0px; transition: 0s;"></div>
      </div>
      <div class="resize-sensor-shrink" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
        <div style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select :props :creatable 1`] = `
<div class="t-select-wrap">
  <div class="t-popup-reference t-select-popup-reference" style="position: relative;">
    <transition-stub name="t-popup_animation" appear="true"></transition-stub>
    <div class="t-select t-size-m"><span class="t-select-placeholder"> </span><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-chevron-down t-size-m t-select-right-icon">
        <path fill-opacity=".9" fill-rule="evenodd" d="M226.57792 413.41696L285.40928 354.58624 511.9936 581.17056 738.5792 354.58624 797.408 413.41696 511.9936 698.8352 226.57792 413.41696Z" clip-rule="evenodd"></path>
      </svg></div>
    <div dir="ltr" class="resize-sensor" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
      <div class="resize-sensor-expand" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
        <div style="position: absolute; left: 0px; top: 0px; transition: 0s;"></div>
      </div>
      <div class="resize-sensor-shrink" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
        <div style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select :props :disabled 1`] = `
<div class="t-select-wrap">
  <div class="t-popup-reference t-select-popup-reference" style="position: relative;">
    <transition-stub name="t-popup_animation" appear="true"></transition-stub>
    <div class="t-select t-is-disabled t-size-m"><span class="t-select-placeholder"> </span><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-chevron-down t-size-m t-select-right-icon">
        <path fill-opacity=".9" fill-rule="evenodd" d="M226.57792 413.41696L285.40928 354.58624 511.9936 581.17056 738.5792 354.58624 797.408 413.41696 511.9936 698.8352 226.57792 413.41696Z" clip-rule="evenodd"></path>
      </svg></div>
    <div dir="ltr" class="resize-sensor" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
      <div class="resize-sensor-expand" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
        <div style="position: absolute; left: 0px; top: 0px; transition: 0s;"></div>
      </div>
      <div class="resize-sensor-shrink" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
        <div style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select :props :labelInValue 1`] = `
<div class="t-select-wrap">
  <div class="t-popup-reference t-select-popup-reference" style="position: relative;">
    <transition-stub name="t-popup_animation" appear="true"></transition-stub>
    <div class="t-select t-size-m"><span class="t-select-placeholder"> </span><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-chevron-down t-size-m t-select-right-icon">
        <path fill-opacity=".9" fill-rule="evenodd" d="M226.57792 413.41696L285.40928 354.58624 511.9936 581.17056 738.5792 354.58624 797.408 413.41696 511.9936 698.8352 226.57792 413.41696Z" clip-rule="evenodd"></path>
      </svg></div>
    <div dir="ltr" class="resize-sensor" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
      <div class="resize-sensor-expand" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
        <div style="position: absolute; left: 0px; top: 0px; transition: 0s;"></div>
      </div>
      <div class="resize-sensor-shrink" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
        <div style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select :props :loading 1`] = `
<div class="t-select-wrap">
  <div class="t-popup-reference t-select-popup-reference" style="position: relative;">
    <transition-stub name="t-popup_animation" appear="true"></transition-stub>
    <div class="t-select t-size-m"><span class="t-select-placeholder"> </span><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-chevron-down t-size-m t-select-right-icon">
        <path fill-opacity=".9" fill-rule="evenodd" d="M226.57792 413.41696L285.40928 354.58624 511.9936 581.17056 738.5792 354.58624 797.408 413.41696 511.9936 698.8352 226.57792 413.41696Z" clip-rule="evenodd"></path>
      </svg></div>
    <div dir="ltr" class="resize-sensor" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
      <div class="resize-sensor-expand" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
        <div style="position: absolute; left: 0px; top: 0px; transition: 0s;"></div>
      </div>
      <div class="resize-sensor-shrink" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
        <div style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select :props :multiple 1`] = `
<div class="t-select-wrap">
  <div class="t-popup-reference t-select-popup-reference" style="position: relative;">
    <transition-stub name="t-popup_animation" appear="true"></transition-stub>
    <div class="t-select t-size-m"><span class="t-select-placeholder"> </span><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-chevron-down t-size-m t-select-right-icon">
        <path fill-opacity=".9" fill-rule="evenodd" d="M226.57792 413.41696L285.40928 354.58624 511.9936 581.17056 738.5792 354.58624 797.408 413.41696 511.9936 698.8352 226.57792 413.41696Z" clip-rule="evenodd"></path>
      </svg></div>
    <div dir="ltr" class="resize-sensor" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
      <div class="resize-sensor-expand" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
        <div style="position: absolute; left: 0px; top: 0px; transition: 0s;"></div>
      </div>
      <div class="resize-sensor-shrink" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
        <div style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select :props :placeholder 1`] = `
<div class="t-select-wrap">
  <div class="t-popup-reference t-select-popup-reference" style="position: relative;">
    <transition-stub name="t-popup_animation" appear="true"></transition-stub>
    <div class="t-select t-size-m"><span class="t-select-placeholder"> please select</span><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-chevron-down t-size-m t-select-right-icon">
        <path fill-opacity=".9" fill-rule="evenodd" d="M226.57792 413.41696L285.40928 354.58624 511.9936 581.17056 738.5792 354.58624 797.408 413.41696 511.9936 698.8352 226.57792 413.41696Z" clip-rule="evenodd"></path>
      </svg></div>
    <div dir="ltr" class="resize-sensor" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
      <div class="resize-sensor-expand" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
        <div style="position: absolute; left: 0px; top: 0px; transition: 0s;"></div>
      </div>
      <div class="resize-sensor-shrink" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
        <div style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select :props :remote 1`] = `
<div class="t-select-wrap" remote="true">
  <div class="t-popup-reference t-select-popup-reference" style="position: relative;">
    <transition-stub name="t-popup_animation" appear="true"></transition-stub>
    <div class="t-select t-size-m"><span class="t-select-placeholder"> </span><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-chevron-down t-size-m t-select-right-icon">
        <path fill-opacity=".9" fill-rule="evenodd" d="M226.57792 413.41696L285.40928 354.58624 511.9936 581.17056 738.5792 354.58624 797.408 413.41696 511.9936 698.8352 226.57792 413.41696Z" clip-rule="evenodd"></path>
      </svg></div>
    <div dir="ltr" class="resize-sensor" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
      <div class="resize-sensor-expand" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
        <div style="position: absolute; left: 0px; top: 0px; transition: 0s;"></div>
      </div>
      <div class="resize-sensor-shrink" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
        <div style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select :props :reserveKeyword 1`] = `
<div class="t-select-wrap">
  <div class="t-popup-reference t-select-popup-reference" style="position: relative;">
    <transition-stub name="t-popup_animation" appear="true"></transition-stub>
    <div class="t-select t-size-m"><span class="t-select-placeholder"> </span><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-chevron-down t-size-m t-select-right-icon">
        <path fill-opacity=".9" fill-rule="evenodd" d="M226.57792 413.41696L285.40928 354.58624 511.9936 581.17056 738.5792 354.58624 797.408 413.41696 511.9936 698.8352 226.57792 413.41696Z" clip-rule="evenodd"></path>
      </svg></div>
    <div dir="ltr" class="resize-sensor" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
      <div class="resize-sensor-expand" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
        <div style="position: absolute; left: 0px; top: 0px; transition: 0s;"></div>
      </div>
      <div class="resize-sensor-shrink" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
        <div style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select :props :size 1`] = `
<div class="t-select-wrap">
  <div class="t-popup-reference t-select-popup-reference" style="position: relative;">
    <transition-stub name="t-popup_animation" appear="true"></transition-stub>
    <div class="t-select t-size-l"><span class="t-select-placeholder"> </span><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-chevron-down t-size-l t-select-right-icon">
        <path fill-opacity=".9" fill-rule="evenodd" d="M226.57792 413.41696L285.40928 354.58624 511.9936 581.17056 738.5792 354.58624 797.408 413.41696 511.9936 698.8352 226.57792 413.41696Z" clip-rule="evenodd"></path>
      </svg></div>
    <div dir="ltr" class="resize-sensor" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
      <div class="resize-sensor-expand" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
        <div style="position: absolute; left: 0px; top: 0px; transition: 0s;"></div>
      </div>
      <div class="resize-sensor-shrink" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
        <div style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select Option :props :disabled 1`] = `
<div class="t-select-wrap">
  <div class="t-popup-reference t-select-popup-reference" style="position: relative;">
    <transition-stub name="t-popup_animation" appear="true"></transition-stub>
    <div class="t-select t-size-m"><span title="1" class="t-select-selectedSingle">1</span><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-chevron-down t-size-m t-select-right-icon">
        <path fill-opacity=".9" fill-rule="evenodd" d="M226.57792 413.41696L285.40928 354.58624 511.9936 581.17056 738.5792 354.58624 797.408 413.41696 511.9936 698.8352 226.57792 413.41696Z" clip-rule="evenodd"></path>
      </svg></div>
    <div dir="ltr" class="resize-sensor" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
      <div class="resize-sensor-expand" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
        <div style="position: absolute; left: 0px; top: 0px; transition: 0s;"></div>
      </div>
      <div class="resize-sensor-shrink" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
        <div style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select Option :props :label 1`] = `
<div class="t-select-wrap">
  <div class="t-popup-reference t-select-popup-reference" style="position: relative;">
    <transition-stub name="t-popup_animation" appear="true"></transition-stub>
    <div class="t-select t-size-m"><span title="1" class="t-select-selectedSingle">1</span><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-chevron-down t-size-m t-select-right-icon">
        <path fill-opacity=".9" fill-rule="evenodd" d="M226.57792 413.41696L285.40928 354.58624 511.9936 581.17056 738.5792 354.58624 797.408 413.41696 511.9936 698.8352 226.57792 413.41696Z" clip-rule="evenodd"></path>
      </svg></div>
    <div dir="ltr" class="resize-sensor" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
      <div class="resize-sensor-expand" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
        <div style="position: absolute; left: 0px; top: 0px; transition: 0s;"></div>
      </div>
      <div class="resize-sensor-shrink" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
        <div style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select Option :props :value 1`] = `
<div class="t-select-wrap">
  <div class="t-popup-reference t-select-popup-reference" style="position: relative;">
    <transition-stub name="t-popup_animation" appear="true"></transition-stub>
    <div class="t-select t-size-m"><span title="1" class="t-select-selectedSingle">1</span><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-chevron-down t-size-m t-select-right-icon">
        <path fill-opacity=".9" fill-rule="evenodd" d="M226.57792 413.41696L285.40928 354.58624 511.9936 581.17056 738.5792 354.58624 797.408 413.41696 511.9936 698.8352 226.57792 413.41696Z" clip-rule="evenodd"></path>
      </svg></div>
    <div dir="ltr" class="resize-sensor" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
      <div class="resize-sensor-expand" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
        <div style="position: absolute; left: 0px; top: 0px; transition: 0s;"></div>
      </div>
      <div class="resize-sensor-shrink" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
        <div style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select OptionGroup :props :value 1`] = `
<div class="t-select-wrap">
  <div class="t-popup-reference t-select-popup-reference" style="position: relative;">
    <transition-stub name="t-popup_animation" appear="true"></transition-stub>
    <div class="t-select t-size-m"><span title="1" class="t-select-selectedSingle">1</span><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-chevron-down t-size-m t-select-right-icon">
        <path fill-opacity=".9" fill-rule="evenodd" d="M226.57792 413.41696L285.40928 354.58624 511.9936 581.17056 738.5792 354.58624 797.408 413.41696 511.9936 698.8352 226.57792 413.41696Z" clip-rule="evenodd"></path>
      </svg></div>
    <div dir="ltr" class="resize-sensor" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
      <div class="resize-sensor-expand" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
        <div style="position: absolute; left: 0px; top: 0px; transition: 0s;"></div>
      </div>
      <div class="resize-sensor-shrink" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
        <div style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"></div>
      </div>
    </div>
  </div>
</div>
`;
